# Cpp_based_FCN

./: .gitignore  CMakeLists.txt  README.md
Breast_Cancer_Data/: x_test.csv  x_train.csv  x_val.csv  y_test.csv  y_train.csv  y_val.csv
include/: bce_loss.h  fcn_operations.h  linear_layer.h  model.h  read_csv.h  relu.h  sigmoid.h  undistort.cpp
src/: bce_loss.cpp  linear_layer.cpp  main.cpp  model.cpp  read_csv.cpp  relu.cpp  sigmoid.cpp  train.cpp
